[tool.poetry]
name = "umakaparser"
version = "0.1.7"
description = ""
authors = ["DBCLS"]
license = "MIT"
repository = "https://github.com/dbcls/umakaparser"
homepage = "http://umaka-viewer.dbcls.jp/"
keywords = ['dbcls', 'rdf']
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: MIT License',
]

[tool.poetry.dependencies]
python = ">=3.7"
click = "^7.0"
isodate = "^0.6.0"
pyparsing = "^2.4"
tqdm = "^4.52.0"
python-i18n = "^0.3.9"
rdflib = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.20.1"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[tool.poetry.scripts]
umakaparser = "umakaparser.services:cmd"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
