[tool.poetry]
authors = ["DBCLS"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'License :: OSI Approved :: MIT License',
]
description = ""
homepage = "http://umaka-viewer.dbcls.jp/"
keywords = ['dbcls', 'rdf']
license = "MIT"
name = "umakaparser"
readme = "docs/description.md"
repository = "https://github.com/dbcls/umakaparser"
version = "0.2.3"

[tool.poetry.dependencies]
click = "^8.0"
isodate = "^0.6.0"
pyparsing = "^3.0"
python = ">=3.7"
python-i18n = "^0.3.9"
rdflib = "^6.0.0"
tqdm = "^4.52.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
flake8 = "^4.0.0"
pytest = "^7.0"
tox = "^3.20.1"

[tool.poetry.scripts]
umakaparser = "umakaparser.services:cmd"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
